--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -44,9 +44,9 @@ jobs:
     - name: Build and push site
       uses: docker/build-push-action@v6
       with:
-        context: ./backend
+        context: .
         platforms: linux/amd64,linux/arm64
-        file: ./.docker/Dockerfile
+        file: Dockerfile
         push: true
         tags: |
           ghcr.io/${{ github.repository_owner }}/${{ env.TAG_LATEST }}
