--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -46,7 +46,7 @@ jobs:
       with:
         context: .
         platforms: linux/amd64,linux/arm64
-        file: Dockerfile
+        file: .docker/Dockerfile
         push: true
         tags: |
           ghcr.io/${{ github.repository_owner }}/${{ env.TAG_LATEST }}
