--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@nuxtjs/tailwindcss": "^6.7.0",
+    "marked": "^16.4.1",
     "motion-v": "^1.7.3",
     "nuxt": "^4.1.3",
     "ogl": "^1.0.11",
