--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.4.7",
+    "typescript": "^5.9.3",
     "vite-tsconfig-paths": "^5.1.4"
   }
 }
