--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "motion-v": "^1.7.3",
     "nuxt": "^4.1.3",
     "ogl": "^1.0.11",
+    "three": "^0.182.0",
     "vue": "^3.5.22",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@types/three": "^0.182.0",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.4.7",
